# test-mb

./: .env  .env.example  Dockerfile  Makefile  README.md  app.py  crontab  curl.sh  db.py  docker-compose.yml  job.py  migrate.py  model_response.py  pyproject.toml  requirements.txt  test.py  test_api.py  verificar_365_dias.py  worker.py  worker_365.py
docker/nginx/: nginx.conf
models/: candles.py  logs.py
services/: log_service.py  mercado_bitcoin.py
